Deploy single-page Valentine site

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             font-size: 3em !important;
             display: flex !important;
             align-items: center;
-            justify-content: center;
+            justify-content: center !important;
             padding: 0 !important;
             background: linear-gradient(135deg, #ff1744 0%, #c94b4b 50%, #8b0000 100%) !important;
         }
